--- a/server/src/.env-example
+++ b/server/src/.env-example
@@ -3,3 +3,5 @@ POSTGRESQL_DB=capitan_products
 POSTGRESQL_HOST=localhost
 POSTGRESQL_USER=postgres
 POSTGRESQL_PORT=5433
+MAGIC_STORE_USERNAME=replace_with_username
+MAGIC_STORE_PASSWORD=replace_with_password
