--- a/server/src/package.json
+++ b/server/src/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --fix --ext .js ."
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "debug": "^2.6.9",
@@ -22,8 +23,6 @@
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
-    "swagger-jsdoc": "^4.3.2",
-    "swagger-ui-express": "^4.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
