--- a/server/src/package.json
+++ b/server/src/package.json
@@ -7,7 +7,9 @@
     "nodemon": "nodemon ./bin/www",
     "db:migrate": "./node_modules/.bin/sequelize-cli db:migrate",
     "db:seed": "./node_modules/.bin/sequelize-cli db:seed:all",
+    "db:generate": "./node_modules/.bin/sequelize-cli migration:generate --name updateDb",
     "lint": "eslint --fix --ext .js ."
+
   },
   "dependencies": {
     "axios": "^1.3.3",
