feat: add HeavenStore Datasource and endpoint GET /products

--- a/server/src/.env-example
+++ b/server/src/.env-example
@@ -5,3 +5,4 @@ POSTGRESQL_USER=postgres
 POSTGRESQL_PORT=5433
 MAGIC_STORE_USERNAME=replace_with_username
 MAGIC_STORE_PASSWORD=replace_with_password
+HEAVEN_STORE_PASSWORD=replace-with_password
